main page and footer styles

--- a/src/html/1C-integration.html
+++ b/src/html/1C-integration.html
@@ -8,97 +8,101 @@
 <!--@@include('html/header.html',{})-->
 <main>
     <section class="integration">
-        <div>
-            <span>Главная</span>
-            <img src="../img/development/Icon.svg" alt="arrow"/>
-            <span>Услуги</span>
-            <img src="../img/development/Icon.svg" alt="arrow"/>
-            <span>Интеграция с 1С</span>
+        <div class="page-breadcrumbs">
+            <span class="page-breadcrumbs-text">Главная</span>
+            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <span class="page-breadcrumbs-text">Услуги</span>
+            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <span class="page-breadcrumbs-text">Интеграция с 1С</span>
         </div>
 
-        <h1>Интеграция с 1С</h1>
-        <div>
-            <button>Начать интеграцию
-                <img src="../img/development/shape.svg" alt="arrow"/>
+        <p class="page-title">Интеграция с 1С</p>
+        <div class="page-header">
+            <button class="page-blueBtn">Начать интеграцию
+                <img class="page-blueBtn-arrow" src="../img/development/shape.svg" alt="arrow"/>
             </button>
         </div>
 
-        <div>
-            <h1>Автоматизация торговли</h1>
-            <div>
-                <p>Интеграция сайта с 1С - это отличное комплексное решение для автоматизации торговли в вашей организации.</p>
-                <p>Интеграция с 1С позволит вам:</p>
-                <div>
-                    <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                    <span>видеть все отчеты по позициям прозрачно с автоматическим формированием</span>
-                </div>
-                <div>
-                    <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                    <span>иметь всегда актуальный каталог, ассортимент и цены</span>
-                </div>
-                <div>
-                    <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                    <span>избавиться от ошибок при формировании заказа и от их потерь</span>
-                </div>
-                <div>
-                    <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                    <span>быть в курсе цепочки продаж как со стороны производителя, так и со стороны покупателя</span>
-                </div>
-                <div>
-                    <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                    <span>видеть максимально актуальную информацию о статусе заказа</span>
-                </div>
-                <div>
-                    <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                    <span>своевременно получать информацию об ошибках</span>
-                </div>
-                <div>
-                    <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                    <span>автоматический перенос данных, добавление товаров за несколько минут</span>
+        <div class="integration-content">
+            <p class="integration-content-header">Автоматизация торговли</p>
+            <div class="integration-content-block">
+                <p class="content-block-text">Интеграция сайта с 1С - это отличное комплексное решение для автоматизации торговли в вашей организации.</p>
+                <p class="content-block-header">Интеграция с 1С позволит вам:</p>
+
+                <div class="page-list-list">
+                    <div class="page-list-item">
+                        <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                        <span class="list-item-text">видеть все отчеты по позициям прозрачно с автоматическим формированием</span>
+                    </div>
+                    <div class="page-list-item">
+                        <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                        <span class="list-item-text">иметь всегда актуальный каталог, ассортимент и цены</span>
+                    </div>
+                    <div class="page-list-item">
+                        <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                        <span class="list-item-text">избавиться от ошибок при формировании заказа и от их потерь</span>
+                    </div>
+                    <div class="page-list-item">
+                        <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                        <span class="list-item-text">быть в курсе цепочки продаж как со стороны производителя, так и со стороны покупателя</span>
+                    </div>
+                    <div class="page-list-item">
+                        <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                        <span class="list-item-text">видеть максимально актуальную информацию о статусе заказа</span>
+                    </div>
+                    <div class="page-list-item">
+                        <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                        <span class="list-item-text">своевременно получать информацию об ошибках</span>
+                    </div>
+                    <div class="page-list-item">
+                        <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                        <span class="list-item-text">автоматический перенос данных, добавление товаров за несколько минут</span>
+                    </div>
                 </div>
             </div>
+            <img class="content-img" src="../img/integration/img" alt="img"/>
         </div>
 
         <hr/>
 
-        <div>
-            <p>Плюсы работы с нами</p>
-            <div>
-                <img src="../img/development/qualification.svg" alt="qualification"/>
-                <p>Квалификация</p>
-                <p>Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
+        <div class="page-pros">
+            <p class="page-pros-title">Плюсы работы с нами</p>
+            <div class="page-pros-item">
+                <img class="pros-item-img" src="../img/development/qualification.svg" alt="qualification"/>
+                <p class="pros-item-header">Квалификация</p>
+                <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
             </div>
-            <div>
-                <img src="../img/internet-shops/calendar.svg" alt="calendar"/>
-                <p>Опыт более 12 лет</p>
-                <p>Опыт работы с малыми и крупным бизнесом</p>
+            <div class="page-pros-item">
+                <img class="pros-item-img" src="../img/internet-shops/calendar.svg" alt="calendar"/>
+                <p class="pros-item-header">Опыт более 12 лет</p>
+                <p class="pros-item-text">Опыт работы с малыми и крупным бизнесом</p>
             </div>
-            <div>
-                <img src="../img/internet-shops/complex.svg" alt="complex"/>
-                <p>Индивидуальный подход</p>
-                <p>Работаем на результат с учетом всех ваших пожеланий</p>
+            <div class="page-pros-item">
+                <img class="pros-item-img" src="../img/internet-shops/complex.svg" alt="complex"/>
+                <p class="pros-item-header">Индивидуальный подход</p>
+                <p class="pros-item-text">Работаем на результат с учетом всех ваших пожеланий</p>
             </div>
-            <div>
-                <img src="../img/development/transparency.svg" alt="transparency"/>
-                <p>Максимальная прозрачность</p>
-                <p>Вы будете в курсе всех задач и результатов</p>
+            <div class="page-pros-item">
+                <img class="pros-item-img" src="../img/development/transparency.svg" alt="transparency"/>
+                <p class="pros-item-header">Максимальная прозрачность</p>
+                <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>
             </div>
         </div>
 
         <div>
-            <p>Существуют различные подходы к реализации интеграции с приложениями 1С, какой из них выбрать – зависит от требований задачи.</p>
-            <div>
-                <div>
-                    <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                    <span>Реализация на основе механизмов интеграции, предоставляемых платформой, своего собственного специализированного API на стороне приложения 1С</span>
+            <p class="page-list-title">Существуют различные подходы к реализации интеграции с приложениями 1С, какой из них выбрать – зависит от требований задачи.</p>
+            <div class="page-list-list">
+                <div class="page-list-item">
+                    <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <span class="list-item-text">Реализация на основе механизмов интеграции, предоставляемых платформой, своего собственного специализированного API на стороне приложения 1С</span>
                 </div>
-                <div>
-                    <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                    <span>Использование механизмов интеграции платформы, которые предоставляют доступ снаружи к объектной модели приложения и не требуют доработки приложения или создания расширения.</span>
+                <div class="page-list-item">
+                    <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <span class="list-item-text">Использование механизмов интеграции платформы, которые предоставляют доступ снаружи к объектной модели приложения и не требуют доработки приложения или создания расширения.</span>
                 </div>
-                <div>
-                    <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                    <span>Использование готовых прикладных протоколов, реализованных в типовых решениях 1С.</span>
+                <div class="page-list-item">
+                    <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <span class="list-item-text">Использование готовых прикладных протоколов, реализованных в типовых решениях 1С.</span>
                 </div>
             </div>
         </div>
