--- a/src/html/development.html
+++ b/src/html/development.html
@@ -7,145 +7,154 @@
 <body>
 <!--@@include('html/header.html',{})-->
 <main>
-     <section class="development">
-         <div>
-             <span>Главная</span>
-             <img src="../img/development/Icon.svg" alt="arrow"/>
-             <span>Услуги</span>
-             <img src="../img/development/Icon.svg" alt="arrow"/>
-             <span>Создание сайтов</span>
-         </div>
-         <h1>Создание сайтов</h1>
-         <div>
-             <div>
-             <p>Решение для начинающего</p>
-             <p>малого бизнеса</p>
-             </div>
-             <button>ТО ЧТО НУЖНО!
-                 <img src="../img/development/shape.svg" alt="arrow"/>
-             </button>
-         </div>
+    <section class="development">
 
-         <div>
-             <div>
-             <h1>Нужен сайт?</h1>
-             <h3>Интернет-магазин или каталог? </h3>
-             <p>Наша команда специализируется в разработке сайтов на базе 1С-Битрикс, Laravel, Modx, имея значительный опыт и сертификаты в указанных продуктах. Наша компания готова вам предложить лучший вариант для сотрудничества.</p>
-             </div>
-             <img src="../img/development/magic_stick.png" alt="magic_stick"/>
+        <div class="page-breadcrumbs">
+            <span class="page-breadcrumbs-text">Главная</span>
+            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <span class="page-breadcrumbs-text">Услуги</span>
+            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <span class="page-breadcrumbs-text">Создание сайтов</span>
+        </div>
 
-             <div>
-                 <h1>Вам повезло!</h1>
-                 <h3>Вы уже нашли то, что искали</h3>
-                 <div>
-                     <img src="../img/development/bitrix.png" alt="bitrix"/>
-                     <img src="../img/development/laravel-logo 1.png" alt="laravel"/>
-                     <img src="../img/development/Modx-logo 1.png" alt="Modx"/>
-                     <img src="../img/development/wordpress-logo 1.png" alt="wordpress"/>
-                 </div>
-             </div>
-             <hr/>
+        <p class="page-title">Создание сайтов</p>
 
-             <div>
-                 <p>Плюсы работы с нами</p>
-                 <div>
-                     <img src="../img/development/qualification.svg" alt="qualification"/>
-                     <p>Квалификация</p>
-                     <p>Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
-                 </div>
-                 <div>
-                     <img src="../img/development/transparency.svg" alt="transparency"/>
-                     <p>Максимальная прозрачность</p>
-                     <p>Вы будете в курсе всех задач и результатов</p>
-                 </div>
-                 <div>
-                     <img src="../img/development/result.svg" alt="result"/>
-                     <p>Быстрый результат</p>
-                     <p>Создание полноценного сайта сроком до 2х недель</p>
-                 </div>
-                 <div>
-                     <img src="../img/development/support.svg" alt="support"/>
-                     <p>Дальнейшее сопровождение</p>
-                     <p>Мы всегда можем помочь и всегда рядом</p>
-                 </div>
-                 <div>
-                     <img src="../img/development/quality.svg" alt="quality"/>
-                     <p>Знак качества</p>
-                     <p>Гарантийное обслуживание после сдачи проекта</p>
-                 </div>
-             </div>
+        <div class="page-header">
+            <div class="page-header-cont">
+                <p class="page-header-text">Решение для начинающего</p>
+                <p class="page-header-boldText">малого бизнеса</p>
+            </div>
+            <button class="page-blueBtn">ТО ЧТО НУЖНО!
+                <img class="page-blueBtn-arrow" src="../img/development/shape.svg" alt="arrow"/>
+            </button>
+        </div>
 
-             <div>
-                 <p>В зависимости от бизнес-задач будущего ресурса,</p>
-                 <p>мы готовы предложить</p>
-                 <div>
-                     <div>Готовые сайты</div>
-                     <div>Индивидуальные решения</div>
-                     <img src="../img/development/jacket.png" alt="jacket"/>
-                     <img src="../img/development/left_hand.png" alt="left_hand"/>
-                     <img src="../img/development/right_hand.png" alt="right_hand"/>
-                 </div>
-                 <div>
-                     <p>Бонусом вы получите:</p>
-                     <div>
-                         <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                         <span>Хостинг бесплатно + SSL сертификат на 1 год в подарок;</span>
-                     </div>
-                     <div>
-                         <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                         <span>Адаптация к мобильной версии</span>
-                     </div>
-                     <div>
-                         <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                         <span>Базовая настройка SEO и подключение основных метрик</span>
-                     </div>
-                     <div>
-                         <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                         <span>Построим для вас CRM;</span>
-                     </div>
-                     <div>
-                         <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                         <span>Консультация по настройке контекстной рекламы для вашего сайта.</span>
-                     </div>
+        <div class="development-content">
+            <div class="development-content-block">
+                <h1>Нужен сайт?</h1>
+                <h3>Интернет-магазин или каталог? </h3>
+                <p class="content-block-text">Наша команда специализируется в разработке сайтов на базе 1С-Битрикс, Laravel, Modx, имея значительный опыт и сертификаты в указанных продуктах. Наша компания готова вам предложить лучший вариант для сотрудничества.</p>
+            </div>
+            <img class="content-block-img" src="../img/development/magic_stick.png" alt="magic_stick"/>
 
-                     <p>При необходимости мы также предлагаем:</p>
+            <div class="development-content-block-2">
+                <h1>Вам повезло!</h1>
+                <h3>Вы уже нашли то, что искали</h3>
+                <div class="content-block-2-gallery">
+                    <img class="block-2-gallery-item" src="../img/development/bitrix.png" alt="bitrix"/>
+                    <img class="block-2-gallery-item" src="../img/development/laravel-logo 1.png" alt="laravel"/>
+                    <img class="block-2-gallery-item" src="../img/development/Modx-logo 1.png" alt="Modx"/>
+                    <img class="block-2-gallery-item" src="../img/development/wordpress-logo 1.png" alt="wordpress"/>
+                </div>
+            </div>
+            <hr/>
 
-                     <div>
-                         <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                         <span>SEO-оптимизацию</span>
-                     </div>
-                     <div>
-                         <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                         <span>Настройка контекстной рекламы под ключ</span>
-                     </div>
-                     <img src="../img/internet-shops/support.png" alt="support"/>
-                 </div>
-             </div>
-             <hr/>
+            <div class="page-pros">
+                <p class="page-pros-title">Плюсы работы с нами</p>
+                <div class="page-pros-item">
+                    <img class="pros-item-img" src="../img/development/qualification.svg" alt="qualification"/>
+                    <p class="pros-item-header">Квалификация</p>
+                    <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
+                </div>
+                <div class="page-pros-item">
+                    <img class="pros-item-img" src="../img/development/transparency.svg" alt="transparency"/>
+                    <p class="pros-item-header">Максимальная прозрачность</p>
+                    <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>
+                </div>
+                <div class="page-pros-item">
+                    <img class="pros-item-img" src="../img/development/result.svg" alt="result"/>
+                    <p class="pros-item-header">Быстрый результат</p>
+                    <p class="pros-item-text">Создание полноценного сайта сроком до 2х недель</p>
+                </div>
+                <div class="page-pros-item">
+                    <img class="pros-item-img" src="../img/development/support.svg" alt="support"/>
+                    <p class="pros-item-header">Дальнейшее сопровождение</p>
+                    <p class="pros-item-text">Мы всегда можем помочь и всегда рядом</p>
+                </div>
+                <div class="page-pros-item">
+                    <img class="pros-item-img" src="../img/development/quality.svg" alt="quality"/>
+                    <p class="pros-item-header">Знак качества</p>
+                    <p class="pros-item-text">Гарантийное обслуживание после сдачи проекта</p>
+                </div>
+            </div>
 
-             <div>
-                 <p>Наши кейсы</p>
-                 <div>
-                     <img src="../img/development/Frame 105.png" alt="frame1"/>
-                     <img src="../img/development/Frame 106.png" alt="frame1"/>
-                     <img src="../img/development/Frame 107.png" alt="frame1"/>
-                 </div>
-                 <div>
-                     <!--              <div class="swiper-arrows">-->
-                     <!--                <div class="swiper-arrow swiper-arrow-prev">-->
-                     <!--                  <img src="@img/icons/icons.svg#arrow-slider" alt="arrow" />-->
-                     <!--                </div>-->
-                     <!--                <div class="swiper-arrow swiper-arrow-next">-->
-                     <!--                  <img src="@img/icons/icons.svg#arrow-slider" alt="arrow" />-->
-                     <!--                </div>-->
-                     <!--              </div>-->
-                     <span>Смотреть все</span>
-                 </div>
-             </div>
+            <div class="development-offer">
+                <p class="development-offer-title-1">В зависимости от бизнес-задач будущего ресурса,</p>
+                <p class="development-offer-title-2">мы готовы предложить</p>
+                <div class="development-offer-main">
+                    <div class="offer-main-item">Готовые сайты</div>
+                    <div class="offer-main-item">Индивидуальные решения</div>
+                    <img class="offer-main-img" src="../img/development/jacket.png" alt="jacket"/>
+                    <img class="offer-main-leftImg" src="../img/development/left_hand.png" alt="left_hand"/>
+                    <img class="offer-main-rightImg" src="../img/development/right_hand.png" alt="right_hand"/>
+                </div>
+                <div class="page-bonuses">
+                    <p class="page-bonuses-title">Бонусом вы получите:</p>
 
-         </div>
+                    <div class="page-list-list">
+                        <div class="page-list-item">
+                            <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                            <span class="list-item-text">Хостинг бесплатно + SSL сертификат на 1 год в подарок;</span>
+                        </div>
+                        <div class="page-list-item">
+                            <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                            <span class="list-item-text">Адаптация к мобильной версии</span>
+                        </div>
+                        <div class="page-list-item">
+                            <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                            <span class="list-item-text">Базовая настройка SEO и подключение основных метрик</span>
+                        </div>
+                        <div class="page-list-item">
+                            <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                            <span class="list-item-text">Построим для вас CRM;</span>
+                        </div>
+                        <div class="page-list-item">
+                            <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                            <span class="list-item-text">Консультация по настройке контекстной рекламы для вашего сайта.</span>
+                        </div>
+                    </div>
 
-     </section>
+                    <p class="page-list-title">При необходимости мы также предлагаем:</p>
+
+                    <div class="page-list-list">
+                        <div class="page-list-item">
+                            <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                            <span class="list-item-text">SEO-оптимизацию</span>
+                        </div>
+                        <div class="page-list-item">
+                            <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                            <span class="list-item-text">Настройка контекстной рекламы под ключ</span>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+            <hr/>
+
+            <div class="page-cases">
+                <p class="page-cases-title">Наши кейсы</p>
+                <div class="page-cases-gallery">
+                    <img class="cases-gallery-item" src="../img/development/Frame 105.png" alt="frame1"/>
+                    <img class="cases-gallery-item" src="../img/development/Frame 106.png" alt="frame1"/>
+                    <img class="cases-gallery-item" src="../img/development/Frame 107.png" alt="frame1"/>
+                </div>
+                <div>
+                    <!--              <div class="swiper-arrows">-->
+                    <!--                <div class="swiper-arrow swiper-arrow-prev">-->
+                    <!--                  <img src="@img/icons/icons.svg#arrow-slider" alt="arrow" />-->
+                    <!--                </div>-->
+                    <!--                <div class="swiper-arrow swiper-arrow-next">-->
+                    <!--                  <img src="@img/icons/icons.svg#arrow-slider" alt="arrow" />-->
+                    <!--                </div>-->
+                    <!--              </div>-->
+                    <span class="page-look">Смотреть все</span>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
 
 </main>
 </body>
