--- a/src/html/internet-shops.html
+++ b/src/html/internet-shops.html
@@ -8,105 +8,133 @@
 <!--@@include('html/header.html',{})-->
 <main>
     <section class="internet">
-        <div>
-            <span>Главная</span>
-            <img src="../img/development/Icon.svg" alt="arrow"/>
-            <span>Услуги</span>
-            <img src="../img/development/Icon.svg" alt="arrow"/>
-            <span>Разработка интернет-магазинов</span>
+        <div class="page-breadcrumbs">
+            <span class="page-breadcrumbs-text">Главная</span>
+            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <span class="page-breadcrumbs-text">Услуги</span>
+            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <span class="page-breadcrumbs-text">Разработка интернет-магазинов</span>
         </div>
 
-        <h1>Разработка интернет-магазинов</h1>
-        <div>
-            <div>
-                <p>Решение для начинающего</p>
-                <p>малого бизнеса</p>
+        <p class="page-title">Разработка интернет-магазинов</p>
+        <div class="page-header">
+            <div class="page-header-cont">
+                <p class="page-header-text">Решение для начинающего</p>
+                <p class="page-header-boldText">малого бизнеса</p>
             </div>
-            <button>ТО ЧТО НУЖНО!
-                <img src="../img/development/shape.svg" alt="arrow"/>
+            <button class="page-blueBtn">ТО ЧТО НУЖНО!
+                <img class="page-blueBtn-arrow" src="../img/development/shape.svg" alt="arrow"/>
             </button>
         </div>
 
-        <div>
-            <h1>Продавайте товары онлайн</h1>
-            <div>
-                <p>Сегодня интернет-магазин один из важных каналов продаж. Наша компания занимается созданием интернет-магазинов на базе 1С-Битрикс уже более 5-ти лет. Имеем хороший опыт интеграции с различными CRM системами, 1С и других системами бухучета.
+        <div class="internet-content">
+            <p class="internet-content-header">Продавайте товары онлайн</p>
+            <div class="internet-content-block">
+                <p class="content-block-text">Сегодня интернет-магазин один из важных каналов продаж. Наша компания занимается созданием интернет-магазинов на базе 1С-Битрикс уже более 5-ти лет. Имеем хороший опыт интеграции с различными CRM системами, 1С и других системами бухучета.
                     Для нас важно, чтобы интернет-магазин был хорошо продуман, касаемо сортировки товаров, фильтрации позиций, интеграции и т.д. Именно поэтому над проектом работает целая команда в составе бизнес-аналитика, дизайнера, маркетолога, верстальщика, разработчика.</p>
-                <img src="../img/internet-shops/internet.png" alt="internet"/>
+                <img class="content-block-img" src="../img/internet-shops/internet.png" alt="internet"/>
             </div>
         </div>
 
         <hr/>
 
-        <div>
-            <p>Плюсы работы с нами</p>
-            <div>
-                <img src="../img/internet-shops/complex.svg" alt="complex"/>
-                <p>Комплексный подход</p>
-                <p>Командная работа над проектом - залог успеха</p>
+        <div class="page-pros">
+            <p class="page-pros-title">Плюсы работы с нами</p>
+            <div class="page-pros-item">
+                <img class="pros-item-img" src="../img/internet-shops/complex.svg" alt="complex"/>
+                <p class="pros-item-header">Комплексный подход</p>
+                <p class="pros-item-text">Командная работа над проектом - залог успеха</p>
             </div>
-            <div>
-                <img src="../img/internet-shops/calendar.svg" alt="calendar"/>
-                <p>Опыт более 12 лет</p>
-                <p>Опыт работы с малыми и крупным бизнесом</p>
+            <div class="page-pros-item">
+                <img class="pros-item-img" src="../img/internet-shops/calendar.svg" alt="calendar"/>
+                <p class="pros-item-header">Опыт более 12 лет</p>
+                <p class="pros-item-text">Опыт работы с малыми и крупным бизнесом</p>
             </div>
-            <div>
-                <img src="../img/development/qualification.svg" alt="qualification"/>
-                <p>Квалификация</p>
-                <p>Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
+            <div class="page-pros-item">
+                <img class="pros-item-img" src="../img/development/qualification.svg" alt="qualification"/>
+                <p class="pros-item-header">Квалификация</p>
+                <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
             </div>
-            <div>
-                <img src="../img/development/transparency.svg" alt="transparency"/>
-                <p>Максимальная прозрачность</p>
-                <p>Вы будете в курсе всех задач и результатов</p>
+            <div class="page-pros-item">
+                <img class="pros-item-img" src="../img/development/transparency.svg" alt="transparency"/>
+                <p class="pros-item-header">Максимальная прозрачность</p>
+                <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>
             </div>
-            <div>
-                <img src="../img/development/result.svg" alt="result"/>
-                <p>Быстрый результат</p>
-                <p>Создание полноценного сайта сроком до 2х недель</p>
+            <div class="page-pros-item">
+                <img class="pros-item-img" src="../img/development/result.svg" alt="result"/>
+                <p class="pros-item-header">Быстрый результат</p>
+                <p class="pros-item-text">Создание полноценного сайта сроком до 2х недель</p>
             </div>
-            <div>
-                <img src="../img/development/support.svg" alt="support"/>
-                <p>Дальнейшее сопровождение</p>
-                <p>Мы всегда можем помочь и всегда рядом</p>
+            <div class="page-pros-item">
+                <img class="pros-item-img" src="../img/development/support.svg" alt="support"/>
+                <p class="pros-item-header">Дальнейшее сопровождение</p>
+                <p class="pros-item-text">Мы всегда можем помочь и всегда рядом</p>
             </div>
-            <div>
-                <img src="../img/development/quality.svg" alt="quality"/>
-                <p>Знак качества</p>
-                <p>Гарантийное обслуживание после сдачи проекта</p>
+            <div class="page-pros-item">
+                <img class="pros-item-img" src="../img/development/quality.svg" alt="quality"/>
+                <p class="pros-item-header">Знак качества</p>
+                <p class="pros-item-text">Гарантийное обслуживание после сдачи проекта</p>
             </div>
         </div>
 
-        <div>
-            <p>Бонусом вы получите:</p>
-            <div>
-                <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                <span>Хостинг бесплатно + SSL сертификат на 1 год в подарок;</span>
+        <div class="page-bonuses">
+            <p class="page-bonuses-title">Бонусом вы получите:</p>
+
+            <div class="page-list-list">
+                <div class="page-list-item">
+                    <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <span class="list-item-text">Хостинг бесплатно + SSL сертификат на 1 год в подарок;</span>
+                </div>
+                <div class="page-list-item">
+                    <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <span class="list-item-text">Адаптация к мобильной версии</span>
+                </div>
+                <div class="page-list-item">
+                    <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <span class="list-item-text">Базовая настройка SEO и подключение основных метрик</span>
+                </div>
+                <div class="page-list-item">
+                    <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <span class="list-item-text">Построим для вас CRM;</span>
+                </div>
+                <div class="page-list-item">
+                    <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <span class="list-item-text">Консультация по настройке контекстной рекламы для вашего сайта.</span>
+                </div>
+            </div>
+
+            <p class="page-bonuses-title">При необходимости мы также предлагаем:</p>
+
+            <div class="page-list-list">
+                <div class="page-list-item">
+                    <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <span class="list-item-text">SEO-оптимизацию</span>
+                </div>
+                <div class="page-list-item">
+                    <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <span class="list-item-text">Настройка контекстной рекламы под ключ</span>
+                </div>
+            </div>
+            <img src="../img/internet-shops/support.png" alt="support"/>
+        </div>
+
+        <div class="page-cases">
+            <p class="page-cases-title">Наши кейсы</p>
+            <div class="page-cases-gallery">
+                <img class="cases-gallery-item" src="../img/development/Frame 105.png" alt="frame1"/>
+                <img class="cases-gallery-item" src="../img/development/Frame 106.png" alt="frame1"/>
+                <img class="cases-gallery-item" src="../img/development/Frame 107.png" alt="frame1"/>
             </div>
             <div>
-                <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                <span>Адаптация к мобильной версии</span>
-            </div>
-            <div>
-                <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                <span>Базовая настройка SEO и подключение основных метрик</span>
-            </div>
-            <div>
-                <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                <span>Построим для вас CRM;</span>
-            </div>
-            <div>
-                <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                <span>Консультация по настройке контекстной рекламы для вашего сайта.</span>
-            </div>
-            <p>При необходимости мы также предлагаем:</p>
-            <div>
-                <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                <span>SEO-оптимизацию</span>
-            </div>
-            <div>
-                <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                <span>Настройка контекстной рекламы под ключ</span>
+                <!--              <div class="swiper-arrows">-->
+                <!--                <div class="swiper-arrow swiper-arrow-prev">-->
+                <!--                  <img src="@img/icons/icons.svg#arrow-slider" alt="arrow" />-->
+                <!--                </div>-->
+                <!--                <div class="swiper-arrow swiper-arrow-next">-->
+                <!--                  <img src="@img/icons/icons.svg#arrow-slider" alt="arrow" />-->
+                <!--                </div>-->
+                <!--              </div>-->
+                <span class="page-look">Смотреть все</span>
             </div>
         </div>
 
