--- a/src/html/cases.html
+++ b/src/html/cases.html
@@ -8,74 +8,75 @@
 <!--@@include('html/header.html',{})-->
 <main>
     <section class="cases">
-        <div>
-            <span>Главная</span>
-            <img src="../img/development/Icon.svg" alt="arrow"/>
-            <span>Кейсы</span>
+        <div class="page-breadcrumbs">
+            <span class="page-breadcrumbs-text">Главная</span>
+            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <span class="page-breadcrumbs-text">Кейсы</span>
         </div>
-        <p>Кейсы</p>
 
-        <div>
-            <div>
-                <div>
-                    <img src="../img/cases/logo1.png" alt="logo1"/>
-                    <p>Многопрофильный медицинский центр имени Святослава Федорова в Москве</p>
-                    <button>Подронее
-                        <img src="../img/services/arrow.svg" alt="arrow"/>
+        <p class="page-title">Кейсы</p>
+
+        <div class="cases-content">
+            <div class="cases-content-item">
+                <div class="content-item-block">
+                    <img class="content-item-logo" src="../img/cases/logo1.png" alt="logo1"/>
+                    <p class="content-item-title">Многопрофильный медицинский центр имени Святослава Федорова в Москве</p>
+                    <button class="details-btn">Подронее
+                        <img class="page-arrow" src="../img/services/arrow.svg" alt="arrow"/>
                     </button>
                 </div>
-                <img src="../img/cases/image1.png" alt="image1"/>
+                <img class="content-item-img" src="../img/cases/image1.png" alt="image1"/>
             </div>
 
-            <div>
-                <div>
-                    <img src="../img/cases/logo2.png" alt="logo2"/>
+            <div class="cases-content-item">
+                <div class="content-item-block">
+                    <img class="content-item-logo" src="../img/cases/logo2.png" alt="logo2"/>
                     <p>Интернет-магазин програмного обеспечения.</p>
-                    <button>Подронее
-                        <img src="../img/services/arrow.svg" alt="arrow"/>
+                    <button class="details-btn">Подронее
+                        <img class="page-arrow" src="../img/services/arrow.svg" alt="arrow"/>
                     </button>
                 </div>
-                <img src="../img/cases/image2.png" alt="image2"/>
-                <img src="../img/cases/image3.png" alt="image3"/>
+                <img class="content-item-img2" src="../img/cases/image2.png" alt="image2"/>
+                <img class="content-item-img3" src="../img/cases/image3.png" alt="image3"/>
             </div>
 
-            <div>
-                <div>
-                    <img src="../img/cases/logo3.png" alt="logo3"/>
+            <div class="cases-content-item">
+                <div class="content-item-block">
+                    <img class="content-item-logo" src="../img/cases/logo3.png" alt="logo3"/>
                     <p>Группа компаний по производству сельскохозяйственной продукции</p>
-                    <button>Подронее
-                        <img src="../img/services/arrow.svg" alt="arrow"/>
+                    <button class="details-btn">Подронее
+                        <img class="page-arrow" src="../img/services/arrow.svg" alt="arrow"/>
                     </button>
                 </div>
-                <img src="../img/cases/image4.png" alt="image4"/>
-                <img src="../img/cases/image5.png" alt="image5"/>
+                <img class="content-item-img4" src="../img/cases/image4.png" alt="image4"/>
+                <img class="content-item-img5" src="../img/cases/image5.png" alt="image5"/>
             </div>
 
-            <div>
-                <div>
-                    <img src="../img/cases/logo4.png" alt="logo4"/>
-                    <p>Семейный развлекательный центр Нижневартовска</p>
-                    <button>Подронее
-                        <img src="../img/services/arrow.svg" alt="arrow"/>
+            <div class="cases-content-item">
+                <div class="content-item-block">
+                    <img class="content-item-logo" src="../img/cases/logo4.png" alt="logo4"/>
+                    <p class="content-item-title">Семейный развлекательный центр Нижневартовска</p>
+                    <button class="details-btn">Подронее
+                        <img class="page-arrow" src="../img/services/arrow.svg" alt="arrow"/>
                     </button>
                 </div>
-                <img src="../img/cases/image6.png" alt="image6"/>
+                <img class="content-item-img" src="../img/cases/image6.png" alt="image6"/>
             </div>
 
-            <div>
-                <div>
-                    <img src="../img/cases/logo5.png" alt="logo5"/>
-                    <p>Сайт клиники по диагностике и лечению катаракты</p>
-                    <button>Подронее
-                        <img src="../img/services/arrow.svg" alt="arrow"/>
+            <div class="cases-content-item">
+                <div class="content-item-block">
+                    <img class="content-item-logo" src="../img/cases/logo5.png" alt="logo5"/>
+                    <p class="content-item-title">Сайт клиники по диагностике и лечению катаракты</p>
+                    <button class="details-btn">Подронее
+                        <img class="page-arrow" src="../img/services/arrow.svg" alt="arrow"/>
                     </button>
                 </div>
-                <img src="../img/cases/image7.png" alt="image7"/>
+                <img class="content-item-img" src="../img/cases/image7.png" alt="image7"/>
             </div>
         </div>
 
-        <div>
-            <img src="../img/blog/shape.svg" alt="shape"/>
+        <div class="page-showMore">
+            <img class="page-showMore-arrow" src="../img/blog/shape.svg" alt="shape"/>
         </div>
 
     </section>
