--- a/src/html/home/fifth-screen.html
+++ b/src/html/home/fifth-screen.html
@@ -1,32 +1,33 @@
 <section class="fifth-screen">
-    <div class="fifth-screen-inner">
+    <div class="fifth-screen-inner appeal-inner">
         <div class="fifth-screen-wrapper">
             <div class="fifth-screen-subtitle">
-                <img class="fifth-screen-subtitle-img" src="../img/home/Ellipse 14.svg" alt="ellipse"/>
-                <span class="fifth-screen-subtitle-text">О КОМПАНИИ</span>
+                <li><span>О КОМПАНИИ</span></li>
             </div>
-          <p class="fifth-screen-statement">За 12 лет на рынке мы построили свои бизнес-процессы в Битрикс24, чтобы быстро решать потребности ваших сайтов.</p>
+            <p class="fifth-screen-tagline">
+                За 12 лет на рынке мы построили свои бизнес-процессы в Битрикс24, чтобы быстро решать потребности ваших сайтов.
+            </p>
 
             <div class="fifth-screen-container">
-                <div class="fifth-screen-box">
-                    <img class="fifth-screen-img" src="../img/home/private.svg" alt="private"/>
-                    <p class="fifth-screen-box-title">Личный кабинет и тарификация</p>
-                    <p class="fifth-screen-box-text">Личный кабинет клиента, в котором вы можете в режиме реал-тайм видеть, какие задачи и на какую сумму в данный момент сделаны, какие в работе.</p>
+                <div class="fifth-screen-container-box">
+                    <img class="fifth-screen-container-box-img" src="../img/home/private.svg" alt="private"/>
+                    <p class="fifth-screen-container-box-title">Личный кабинет и тарификация</p>
+                    <p class="fifth-screen-container-box-text">Личный кабинет клиента, в котором вы можете в режиме реал-тайм видеть, какие задачи и на какую сумму в данный момент сделаны, какие в работе.</p>
                 </div>
-                <div class="fifth-screen-box">
-                    <img class="fifth-screen-img" src="../img/home/team.svg" alt="team"/>
-                    <p class="fifth-screen-box-title">Наша команда</p>
-                    <p class="fifth-screen-box-text">У нас 39 разработчиков в штате, что позволяет нам собирать команды под ваши нужды.</p>
+                <div class="fifth-screen-container-box">
+                    <img class="fifth-screen-container-box-img" src="../img/home/team.svg" alt="team"/>
+                    <p class="fifth-screen-container-box-title">Наша команда</p>
+                    <p class="fifth-screen-container-box-text">У нас 39 разработчиков в штате, что позволяет нам собирать команды под ваши нужды.</p>
                 </div>
-                <div class="fifth-screen-box">
-                    <img class="fifth-screen-img" src="../img/home/certificate.svg" alt="team"/>
-                    <p class="fifth-screen-box-title">Сертификация</p>
-                    <p class="fifth-screen-box-text">Все сотрудники прошли сертификацию Битрикса - на ваших проектах будут работать только проверенные разработчики.</p>
+                <div class="fifth-screen-container-box">
+                    <img class="fifth-screen-container-box-img" src="../img/home/certificate.svg" alt="team"/>
+                    <p class="fifth-screen-container-box-title">Сертификация</p>
+                    <p class="fifth-screen-container-box-text">Все сотрудники прошли сертификацию Битрикса - на ваших проектах будут работать только проверенные разработчики.</p>
                 </div>
-                <div class="fifth-screen-box">
-                    <img class="fifth-screen-img" src="../img/home/clock.svg" alt="team"/>
-                    <p class="fifth-screen-box-title">Сроки работы</p>
-                    <p class="fifth-screen-box-text">Вы и ваш клиент всегда знаете, когда мы начнем работу над задачей и когда закончим, так как все работы оцениваются и имеют сроки сдачи.</p>
+                <div class="fifth-screen-container-box">
+                    <img class="fifth-screen-container-box-img" src="../img/home/clock.svg" alt="team"/>
+                    <p class="fifth-screen-container-box-title">Сроки работы</p>
+                    <p class="fifth-screen-container-box-text">Вы и ваш клиент всегда знаете, когда мы начнем работу над задачей и когда закончим, так как все работы оцениваются и имеют сроки сдачи.</p>
                 </div>
 
             </div>
