--- a/src/html/home/sixth-screen.html
+++ b/src/html/home/sixth-screen.html
@@ -2,83 +2,84 @@
     <div class="sixth-screen-inner">
         <div class="sixth-screen-wrapper">
             <div class="sixth-screen-subtitle">
-                <img class="sixth-screen-subtitle-img" src="../img/home/Ellipse 14.svg" alt="ellipse"/>
-                <span class="sixth-screen-subtitle-text">ОТКРЫТЫЕ ВАКАНСИИ</span>
+                <li><span>ОТКРЫТЫЕ ВАКАНСИИ</span></li>
             </div>
-            <p class="sixth-screen-statement">Требуются специалисты:</p>
+            <p class="sixth-screen-tagline">
+                Требуются специалисты:
+            </p>
             <div class="sixth-screen-container">
-                <div class="sixth-screen-box">
-                    <p class="sixth-screen-box-position">Инженер-программист</p>
-                    <div class="sixth-screen-box-point">
+                <div class="sixth-screen-container-box">
+                    <p class="sixth-screen-container-box-position">Инженер-программист</p>
+                    <div class="sixth-screen-container-box-point">
                     <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                        <span class="sixth-screen-box-text">Опыт работы: от 1 год</span>
+                        <span class="sixth-screen-container-box-point-text">Опыт работы: от 1 год</span>
                     </div>
-                    <div class="sixth-screen-box-point">
+                    <div class="sixth-screen-container-box-point">
                     <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                        <span class="sixth-screen-box-text">График работы: 5/2</span>
+                        <span class="sixth-screen-container-box-point-text">График работы: 5/2</span>
                     </div>
-                    <div class="sixth-screen-box-point">
+                    <div class="sixth-screen-container-box-point">
                     <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                        <span class="sixth-screen-box-text">Зарплата: от 40 000 р. </span>
+                        <span class="sixth-screen-container-box-point-text">Зарплата: от 40 000 р. </span>
                     </div>
-                    <button class="sixth-screen-box-btn">Интересно!</button>
+                    <button class="sixth-screen-container-box-btn">Интересно!</button>
                 </div>
-                <div class="sixth-screen-box">
-                    <p class="sixth-screen-box-position">Инженер-программист</p>
-                    <div class="sixth-screen-box-point">
+                <div class="sixth-screen-container-box">
+                    <p class="sixth-screen-container-box-position">Инженер-программист</p>
+                    <div class="sixth-screen-container-box-point">
                         <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                        <span class="sixth-screen-box-text">Опыт работы: от 1 год</span>
+                        <span class="sixth-screen-container-box-point-text">Опыт работы: от 1 год</span>
                     </div>
-                    <div class="sixth-screen-box-point">
+                    <div class="sixth-screen-container-box-point">
                         <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                        <span class="sixth-screen-box-text">График работы: 5/2</span>
+                        <span class="sixth-screen-container-box-point-text">График работы: 5/2</span>
                     </div>
-                    <div class="sixth-screen-box-point">
+                    <div class="sixth-screen-container-box-point">
                         <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                        <span class="sixth-screen-box-text">Зарплата: от 40 000 р. </span>
+                        <span class="sixth-screen-container-box-point-text">Зарплата: от 40 000 р. </span>
                     </div>
-                    <button class="sixth-screen-box-btn">Интересно!</button>
+                    <button class="sixth-screen-container-box-btn">Интересно!</button>
                 </div>
-                <div class="sixth-screen-box">
-                    <p class="sixth-screen-box-position">Инженер-программист</p>
-                    <div class="sixth-screen-box-point">
+                <div class="sixth-screen-container-box">
+                    <p class="sixth-screen-container-box-position">Инженер-программист</p>
+                    <div class="sixth-screen-container-box-point">
                         <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                        <span class="sixth-screen-box-text">Опыт работы: от 1 год</span>
+                        <span class="sixth-screen-container-box-point-text">Опыт работы: от 1 год</span>
                     </div>
-                    <div class="sixth-screen-box-point">
+                    <div class="sixth-screen-container-box-point">
                         <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                        <span class="sixth-screen-box-text">График работы: 5/2</span>
+                        <span class="sixth-screen-container-box-point-text">График работы: 5/2</span>
                     </div>
-                    <div class="sixth-screen-box-point">
+                    <div class="sixth-screen-container-box-point">
                         <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                        <span class="sixth-screen-box-text">Зарплата: от 40 000 р. </span>
+                        <span class="sixth-screen-container-box-point-text">Зарплата: от 40 000 р. </span>
                     </div>
-                    <button class="sixth-screen-box-btn">Интересно!</button>
+                    <button class="sixth-screen-container-box-btn">Интересно!</button>
                 </div>
-                <div class="sixth-screen-box">
-                    <p class="sixth-screen-box-position">Инженер-программист</p>
-                    <div class="sixth-screen-box-point">
+                <div class="sixth-screen-container-box">
+                    <p class="sixth-screen-container-box-position">Инженер-программист</p>
+                    <div class="sixth-screen-container-box-point">
                         <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                        <span class="sixth-screen-box-text">Опыт работы: от 1 год</span>
+                        <span class="sixth-screen-container-box-point-text">Опыт работы: от 1 год</span>
                     </div>
-                    <div class="sixth-screen-box-point">
+                    <div class="sixth-screen-container-box-point">
                         <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                        <span class="sixth-screen-box-text">График работы: 5/2</span>
+                        <span class="sixth-screen-container-box-point-text">График работы: 5/2</span>
                     </div>
-                    <div class="sixth-screen-box-point">
+                    <div class="sixth-screen-container-box-point">
                         <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                        <span class="sixth-screen-box-text">Зарплата: от 40 000 р. </span>
+                        <span class="sixth-screen-container-box-point-text">Зарплата: от 40 000 р. </span>
                     </div>
-                    <button class="sixth-screen-box-btn">Интересно!</button>
+                    <button class="sixth-screen-container-box-btn">Интересно!</button>
                 </div>
-                <div class="sixth-screen-container-arrows">
-                    <div class="sixth-screen-container-arrow">
-                        <img src="../img/home/arrow_left.svg" alt="arrow" />
-                    </div>
-                    <div class="sixth-screen-container-arrow">
-                        <img src="../img/home/arrow_right.svg" alt="arrow" />
-                    </div>
-                </div>
+<!--                <div class="sixth-screen-container-arrows">-->
+<!--                    <div class="sixth-screen-container-arrow">-->
+<!--                        <img src="../img/home/arrow_left.svg" alt="arrow" />-->
+<!--                    </div>-->
+<!--                    <div class="sixth-screen-container-arrow">-->
+<!--                        <img src="../img/home/arrow_right.svg" alt="arrow" />-->
+<!--                    </div>-->
+<!--                </div>-->
             </div>
             <p class="sixth-screen-lowStat">А если тебе еще не хватает знаний, приходи к нам на обучение. Мы поможем освоить азы профессии программиста.</p>
 
