--- a/src/html/plug.html
+++ b/src/html/plug.html
@@ -7,73 +7,105 @@
 <body>
 <!--@@include('html/header.html',{})-->
 <main>
-  <section class="plug">
-      <div>
-          <button>КОНСУЛЬТАЦИЯ!
-              <img src="../img/development/shape.svg" alt="arrow"/>
-          </button>
-      </div>
+    <section class="plug">
 
-      <div>
-          <p>Компания “ViatekMedia” осуществляет следующие виды услуг:</p>
-          <div>
-              <div>
-                  <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                  <span>Разработка компьютерного программного обеспечения под заказ.</span>
-              </div>
-              <div>
-                  <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                  <span>Доработка CRM-систем и программирование бизнес-процессов</span>
-              </div>
-              <div>
-                  <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                  <span>Разработка сайтов</span>
-              </div>
-              <div>
-                  <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                  <span>Разработка мобильных приложений и игр</span>
-              </div>
-              <div>
-                  <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
-                  <span>Поддержка сайтов и CRM-систем</span>
-              </div>
-          </div>
-      </div>
+        <div class="page-header">
+            <button class="page-blueBtn">КОНСУЛЬТАЦИЯ!
+                <img class="page-blueBtn-arrow" src="../img/development/shape.svg" alt="arrow"/>
+            </button>
+        </div>
 
-      <div>
-          <p>Так же вы можете связаться с нами с помощью формы обратной связи</p>
-          <img src="../img/home/arrowup.svg" alt="arrowup"/>
+        <div class="plug-main">
 
-          <div>
-              <p>Напишите нам</p>
-              <div>
-                  <div>
-                      <div>
-                  <input type="text" placeholder="Ваше имя *"/>
-                      </div>
-                      <div>
-                  <input type="text" placeholder="E-mail для связи *"/>
-                      </div>
-                          <div>
-                  <input type="text" placeholder="Телефон (если хотите, чтоб мы позвонили)"/>
-                          </div>
-                  </div>
-                  <input type="text" placeholder="Сообщение *"/>
-              </div>
+            <p class="plug-main-title">Компания “ViatekMedia” осуществляет следующие виды услуг:</p>
 
-              <div>
-                  <img src="../img/home/switcher.svg" alt="switcher"/>
-                  <span>Я согласен на</span>
-                  <span>обработку персональных данных</span>
-                  <button>Отправить</button>
-              </div>
-          </div>
+            <div class="page-list-block">
+                <div class="page-list-item">
+                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <span class="page-list-text">Разработка компьютерного программного обеспечения под заказ.</span>
+                </div>
+                <div class="page-list-item">
+                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <span class="page-list-text">Доработка CRM-систем и программирование бизнес-процессов</span>
+                </div>
+                <div class="page-list-item">
+                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <span class="page-list-text">Разработка сайтов</span>
+                </div>
+                <div class="page-list-item">
+                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <span class="page-list-text">Разработка мобильных приложений и игр</span>
+                </div>
+                <div class="page-list-item">
+                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <span class="page-list-text">Поддержка сайтов и CRM-систем</span>
+                </div>
+            </div>
+        </div>
+
+        <div>
+            <p>Так же вы можете связаться с нами с помощью формы обратной связи</p>
+            <img src="../img/home/arrowup.svg" alt="arrowup"/>
 
 
 
-      </div>
 
-  </section>
+            <div class="contacts-form">
+                <p class="contacts-form-message">Мы в мессенджерах</p>
+                <div class="contacts-form-images">
+                    <img class="connection-img" src="../img/prefooter/call1.svg" alt="call1"/>
+                    <img class="connection-img" src="../img/prefooter/call2.svg" alt="call2"/>
+                    <img class="connection-img" src="../img/prefooter/call3.svg" alt="call3"/>
+                </div>
+                <hr/>
+                <p class="contacts-form-text">Есть что сказать или появились вопросы?</p>
+                <p class="contacts-form-title">Пишите нам!</p>
+                <div class="contacts-form-block">
+                    <label class="contacts-form-label">
+                        Ваше имя
+                        <input class="contacts-form-input" type="text"/>
+                    </label>
+                </div>
+                <div class="contacts-form-block">
+                    <label class="contacts-form-label">
+                        Как вам ответить?
+                        <input class="contacts-form-input" type="" placeholder="Телефонный звонок"/>
+                    </label>
+                </div>
+                <div class="contacts-form-block">
+                    <label class="contacts-form-label">
+                        Контакт
+                        <input class="contacts-form-input" type="text"/>
+                    </label>
+                </div>
+                <div class="contacts-form-block">
+                    <label class="contacts-form-label">
+                        Сообщение
+                        <input class="contacts-form-inputMessage" type="text"/>
+                    </label>
+                </div>
+
+                <div class="contacts-form-data">
+                    <input class="contacts-form-checkbox" type="checkbox"/>
+                    <span class="contacts-form-text">Нажимая кнопку «Отправить», я принимаю соглашение сайта</span>
+                    <span class="contacts-form-textLine">об обработке персональных данных.</span>
+                </div>
+
+                <button class="contacts-form-btn">
+                    <img class="contacts-form-img" src="../img/contacts/shape.svg" alt="shape"/>
+                    Отправить
+                </button>
+
+                <hr/>
+
+                <div class="contacts-form-secure">
+                    <img class="form-secure-img" src="../img/contacts/shape1.svg" alt="shape1"/>
+                    <span class="form-secure-text">Мы гарантируем безопасность введенных данных. Они используются только для связи с клиентом и не хранятся на наших серверах</span>
+                </div>
+
+            </div>
+
+    </section>
 </main>
 
 </body>
