--- a/src/index.html
+++ b/src/index.html
@@ -10,28 +10,28 @@
       @@include('html/home/forth-screen.html',{})
       @@include('html/home/fifth-screen.html',{})
       @@include('html/home/sixth-screen.html',{})
-      @@include('html/services.html',{})
-      @@include('html/development.html',{})
-      @@include('html/internet-shops.html',{})
-      @@include('html/1C-integration.html',{})
-      @@include('html/support.html',{})
-      @@include('html/crm-implement.html',{})
-      @@include('html/crm-support.html',{})
-      @@include('html/amocrm.html',{})
-      @@include('html/maintenance.html',{})
-      @@include('html/automation.html',{})
-      @@include('html/analysis.html',{})
-      @@include('html/integrations.html',{})
-      @@include('html/company.html',{})
-      @@include('html/blog.html',{})
-      @@include('html/optimization.html',{})
-      @@include('html/contacts.html',{})
-      @@include('html/cases.html',{})
-      @@include('html/surgery.html',{})
-      @@include('html/specialists.html',{})
-      @@include('html/mobile.html',{})
-      @@include('html/plug.html',{})
-      @@include('html/prefooter.html',{})
+      @@include('html/home/services.html',{})
+<!--      @@include('html/development.html',{})-->
+<!--      @@include('html/internet-shops.html',{})-->
+<!--      @@include('html/1C-integration.html',{})-->
+<!--      @@include('html/support.html',{})-->
+<!--      @@include('html/crm-implement.html',{})-->
+<!--      @@include('html/crm-support.html',{})-->
+<!--      @@include('html/amocrm.html',{})-->
+<!--      @@include('html/maintenance.html',{})-->
+<!--      @@include('html/automation.html',{})-->
+<!--      @@include('html/analysis.html',{})-->
+<!--      @@include('html/integrations.html',{})-->
+<!--      @@include('html/company.html',{})-->
+<!--      @@include('html/blog.html',{})-->
+<!--      @@include('html/optimization.html',{})-->
+<!--      @@include('html/contacts.html',{})-->
+<!--      @@include('html/cases.html',{})-->
+<!--      @@include('html/project.html',{})-->
+<!--      @@include('html/specialists.html',{})-->
+<!--      @@include('html/mobile.html',{})-->
+<!--      @@include('html/plug.html',{})-->
+      @@include('html/home/prefooter.html',{})
 
     </main>
     @@include('html/footer.html',{})
